--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -9,9 +9,7 @@ body{
     /* height: 100vh;    */
 }
 .hero{
-	height: 100vh;
-	width: 100%;
-	background-image: url(../img/background.jpg);
+	background-color: black;
 	background-size: cover;
 	background-position: center;
     padding-top: 45px;
@@ -40,11 +38,8 @@ nav ul li a:hover{
 .main-navbar{
     background-color: none;
 }
-h4{
-    color: aliceblue;
-}
 span{
-    color:#f9004d;
+    color:#139DE8;
 }
 .nav-link{
     color: #fff !important  ;
@@ -59,13 +54,17 @@ span{
 }
 .slider{
     height: 100vh;  
-    display: flex;
+    flex-wrap: wrap-reverse;
     align-items: center;
 }
 h1{
-	color: white;
-	margin: 20px 0px 20px;
+	color:white;
+	margin: 0 auto;
 	font-size: 75px;
+}
+h2{
+	font-size: 50px;
+	margin: 0 auto;
 }
 h3{
 	color: white;
@@ -82,4 +81,29 @@ h4{
 	font-size: 35px;
 	letter-spacing: 1px;
 	cursor: pointer;
+}
+
+/* about */
+
+.about-image{
+	width:70%;
+	border-radius: 5%;
+	overflow: hidden;
+	margin-top:50px;
+	margin-left: 60px;
+}
+.about{
+	background-color: #13161C;
+	color: #fff;
+}
+.row{
+	--bs-gutter-x: 0rem;
+}
+.about-text{
+	margin-top:50px;
+}
+.line{
+	width: 100%;
+	height: 1px;
+	background-color:#139DE8;
 }
