--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -8,6 +8,9 @@ body{
     background-color: var(--secondary);
     height: 100vh;   
 }
+.logo{
+	width: 170px;
+}
 .hero{
 	background-color: black;
 	background-size: cover;
@@ -63,8 +66,7 @@ h1{
 	font-size: 75px;
 }
 h2{
-	font-size: 50px;
-	margin: 0 auto;
+	font-size: 75px;
 }
 h3{
 	color: white;
@@ -101,7 +103,7 @@ h4{
 	--bs-gutter-x: 0rem;
 }
 .about-text{
-	margin-top:50px;
+	margin-top:100px;
 }
 .line{
 	width: 100%;
@@ -109,13 +111,14 @@ h4{
 	background-color:#139DE8;
 }
 
-/* experience */
+/* parcours */
 .exper{
 	background-color: black;
+	border: none;
 }
 .card{
 	height: 390px;
-	width: 335px;
+	/* width: 335px; */
 	padding:20px 20px;
 	background:#191919;
 	border-radius: 20px;
@@ -133,12 +136,39 @@ h4{
 	color: #fff;
 	font-size: 75px;
 	width: 1130px;
-	margin: 0 auto;
+	/* margin: 0 auto; */
 	text-align: center;
+	margin-left: 50px;
+	margin-top: 100px;
 }
 .box{
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	min-height: 400px;
+	margin-bottom: 100px;
+	margin-top: 60px;
 }
+h5{
+	color: #fff;
+	font-size: 23px;
+	margin-bottom: 15px;
+}
+.para p{
+	color: #fcfc;
+	font-size: 16px;
+	line-height: 27px;
+	margin-bottom: 25px;
+}
+.card .button{
+	background-color:#139DE8;
+	color: #fff;
+	text-decoration: none;
+	border: 2px solid transparent;
+	font-weight: bold;
+	padding: 9px 22px;
+	border-radius: 30px;
+	transition: .4s;
+}
+
+/* contact */
