--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -5,8 +5,7 @@
 }
 
 body{
-    background-color: var(--secondary);
-    /* height: 100vh;    */
+    height: 100vh;   
 }
 .logo{
 	width: 170px;
@@ -65,9 +64,6 @@ h1{
 	margin: 0 auto;
 	font-size: 75px;
 }
-h2{
-	font-size: 75px;
-}
 h3{
 	color: white;
 	font-size: 25px;
@@ -95,6 +91,11 @@ h4{
 	margin-left: 50px;
 	margin-bottom: 50px;
 }
+.biogaphie{
+	color: #fff;
+	margin: 0 auto;
+	font-size: 69px;
+}
 .about{
 	background-color: #13161C;
 	color: #fff;
@@ -114,11 +115,9 @@ h4{
 /* parcours */
 .exper{
 	background-color: black;
-	border: none;
 }
 .card{
 	height: 390px;
-	/* width: 335px; */
 	padding:20px 20px;
 	background:#191919;
 	border-radius: 20px;
@@ -135,7 +134,6 @@ h4{
 .parcours{
 	color: #fff;
 	font-size: 75px;
-	width: 1130px;
 	text-align: center;
 	margin-top: 100px;
 }
@@ -158,16 +156,7 @@ h5{
 	line-height: 27px;
 	margin-bottom: 25px;
 }
-.card .button{
-	background-color:#139DE8;
-	color: #fff;
-	text-decoration: none;
-	border: 2px solid transparent;
-	font-weight: bold;
-	padding: 9px 22px;
-	border-radius: 30px;
-	transition: .4s;
-}
+
 
 /* talent */
 	
