--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -70,7 +70,7 @@ h3{
 	margin-bottom: 50px;
 }
 h4{
-	color: #fcfc;
+	color: #139DE8;
 	letter-spacing: 3px;
 	font-size: 20px;
 }
@@ -151,17 +151,44 @@ h5{
 	margin-bottom: 15px;
 }
 .para p{
-	color: #fcfc;
+	color: #139DE8;
 	font-size: 16px;
 	line-height: 27px;
 	margin-bottom: 25px;
 }
 
 
-/* talent */
+/* competence */
 	
 
 /* contact */
-.contact .title::after{
-	content: "Prendre contact";
+.iconSection{
+	display: flex;
+}
+.contact{
+	background-color: #13161C;
+}
+.contact h2{
+	color: #fff;
+	font-size: 65px;
+	text-align: center;
+}
+.icon-text{
+	color: #fff;
+	margin-left: 10px;
+}
+.c-text{
+	text-align: center;
+}
+.form-label{
+	color: #fff;
+}
+/* footer */
+footer{
+	background-color:black ;
+	height: 100px;
+	text-align: center;
+}
+.foot{
+	color: #fff;
 }
