--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -11,7 +11,7 @@ body{
 	width: 170px;
 }
 .hero{
-	background-image:url('..//images/thomas.jpg');
+	background-image:url('..//assets/thomas.jpg');
 	background-size: cover;
 }
 nav ul li{
