--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -29,18 +29,9 @@ nav ul li a{
 	text-transform: capitalize;
 	margin-right: 20px;
 }
-a:hover{
+a link:hover{
 	color: #139DE8;
 	transition: 0.4s;
-}
-/* .content{
-	position: absolute;
-	top: 50%;
-	left:8%;
-	transform: translateY(-50%);
-} */
-.main-navbar{
-    /* background-color: none; */
 }
 span{
     color:#139DE8;
@@ -71,19 +62,14 @@ h5 b{
 	font-size: 20px;
 }
 .about-image{
-	width:80%;
+	width:100%;
 	border-radius: 5%;
 	overflow: hidden;
 }
 .about{
-	text-align: left;
 	color: #fff;
 	font-size: 55px;
 	margin-top: 55px;
-}
-.biogaphie{
-	color: #fff;
-	font-size: 65px;
 }
 #about{
 	background-color: black;
