--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -17,21 +17,34 @@ html, body{
 	background-size: cover;
 	background-position: center;
 }
+.navbar-collapse{
+	padding-right: 60px;
+}
 nav ul li{
 	list-style-type: none;
 	display: inline-block;
-	padding: 10px;
+	padding: 20px;
 }
 nav ul li a{
 	color: white;
 	text-decoration: none;
 	font-weight: bold;
 	text-transform: capitalize;
-	margin-right: 20px;
 }
-a link:hover{
+nav li a::after{
+	content: '';
+	width: 0;
+	height: 3px;
+	background-color:#139DE8;
+	margin: auto;
+	display: block;
+}
+nav li a:hover::after{
+	width: 100%;
+	transition: 0,3s li;
+}
+nav ul li a:hover{
 	color: #139DE8;
-	transition: 0.4s;
 }
 span{
     color:#139DE8;
